aiclass html layout is finished

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- Footer Starts Here -->
             <div class="container-fluid">
                 <div class="row min-vh-100 align-items-center">
                     <div class="container">
@@ -249,6 +249,8 @@
             </div>
                 </div>
             </div>
+
+              <!-- Footer Ends Here -->
             
             
 
