--- a/aiclass.html
+++ b/aiclass.html
@@ -137,7 +137,10 @@
        
         <div class="row align-items-center min-vh-100 p-0 m-0">
                 <div class="container pt-5">
-                    <div class="col-md-12"><h1 class="text-center display-4 mb-5">AI-Powered, Cloud Software Solutions</h1></div>
+                    <div class="col-md-12  mb-5 text-center ">
+                        <h1 class="display-4">AI-Powered, Cloud Software Solutions</h1>
+                        <h3 class="text-muted">Advanced Features of aiCLASS</h3>
+                    </div>
                   <div class="col-md-10 offset-md-1">  
                       <div class="row justify-content-center no-gutters">
                     <div class="col-md-6">
