aiexam html layout has been finished

--- a/aiclass.html
+++ b/aiclass.html
@@ -80,10 +80,11 @@
                 <div class="row min-vh-100 align-items-center">
                     
                         <div class="col-md-4 offset-md-1">
-                                <h2 class="my-4">Make the most of your <br/> space on campus </h2>
-                            <p>Using for state-of-the-art technologies, we assign courses to rooms 
-                            based on course size, equipment requirements, seating layout and instructor-led preferences.
+                                <h2 class="my-4">Understand all happenings on <br> a centralised calendar.</h2>
+                            <p>Perform automatic location-based searching and filter searches based on preferences and requirements.
                             </p>
+                            <p>
+                                    Never miss the free tea and biscuits again!</p>
         
                     </div>
                 <div class="col-md-7 p-0">
