aiexam and aiclass pages style sheet done

--- a/aievent.html
+++ b/aievent.html
@@ -112,7 +112,7 @@
             </div>
             <div class="container-fluid">
                 <div container>
-            <div class="footer d-flex">
+            <div class="footer d-flex py-5">
                 <div class="col-md-8">
                         <img src="https://via.placeholder.com/220x60" class="img-fluid" alt="Responsive image">
                         <small class="d-block">© 2019 Jadwal.ai All rights reserved.</small>
