all pages desktop version are done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="aievent.html">aiEvent</a>
                     </li>
                   </ul>
-                  <a href="#" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
+                  <a href="/scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
                 </div>
         </div>        
         </nav>
@@ -138,7 +138,7 @@
                                     SIS and leading communication and SSO tools.</h4>
                             </div>
                             <h3 class="font-weight-bold my-4">Not interested in creating the perfect schedule? </h3>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Don't Click Here</a>
+                            <a class="btn btn-primary btn-lg" href="/scheduledemo.html" role="button">Don't Click Here</a>
 
                     </div>
             </div>
