--- a/aiexam.html
+++ b/aiexam.html
@@ -35,10 +35,10 @@
                             <a class="nav-link" href="aievent.html">aiEvent</a>
                     </li>
                   </ul>
-                  <a href="#" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
+                  <a href="/scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
                 </div>
         </div>        
-        </nav>
+    </nav>
         <div class="container-fluid">
             <div class="container">
                 <div class="row align-items-center min-vh-100">
