--- a/aievent.html
+++ b/aievent.html
@@ -7,7 +7,7 @@
     <title>Jadwal.ai-Stress Free Scheduling</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,800,900&display=swap&subset=latin-ext" rel="stylesheet">  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >
 
 
 
@@ -26,16 +26,16 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav mr-auto">
                             <li class="nav-item ">
-                              <a class="nav-link " href="/aiclass.html">aiClass <span class="sr-only">(current)</span></a>
+                              <a class="nav-link " href="aiclass.html">aiClass <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item ">
-                              <a class="nav-link" href="/aiexam.html">aiExam</a>
+                              <a class="nav-link" href="aiexam.html">aiExam</a>
                             </li>
                             <li class="nav-item active">
                                     <a class="nav-link" href="aievent.html">aiEvent</a>
                             </li>
                           </ul>
-                          <a href="/scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
+                          <a href="scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
                         </div>
                 </div>        
             </nav>
