--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:100,300,400,800,900&display=swap&subset=latin-ext" rel="stylesheet">  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    
-    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >
 
 
 
@@ -27,16 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="/aiclass.html">aiClass <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="aiclass.html">aiClass <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/aiexam.html">aiExam</a>
+                      <a class="nav-link" href="aiexam.html">aiExam</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link" href="aievent.html">aiEvent</a>
                     </li>
                   </ul>
-                  <a href="/scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
+                  <a href="scheduledemo.html" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Schedule a Demo</a>
                 </div>
         </div>        
         </nav>
@@ -144,7 +144,7 @@
                                     SIS and leading communication and SSO tools.</h4>
                             </div>
                             <h3 class="font-weight-bold my-4">Not interested in creating the perfect schedule? </h3>
-                            <a class="btn btn-primary btn-lg" href="/scheduledemo.html" role="button">Don't Click Here</a>
+                            <a class="btn btn-primary btn-lg" href="scheduledemo.html" role="button">Don't Click Here</a>
 
                     </div>
             </div>
