--- a/aiclass.html
+++ b/aiclass.html
@@ -19,7 +19,7 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><img height="26" class="d-inline-block align-top" src="images/jadwal-logo.svg"/></a>
+                    <a class="navbar-brand" href="index.html"><img height="26" class="d-inline-block align-top" src="images/jadwal-logo.svg"/></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
