--- a/aiclass.html
+++ b/aiclass.html
@@ -247,27 +247,28 @@
     <div class="container-fluid border-top position-relative overflow-hidden">
         <div class="footer-bottom-image"></div>
         <div class="container">
-            <div class="footer d-flex py-5 flex-md-row flex-sm-column flex-sm-column-reverse">
-                <div class="col-lg-8">
-                        <img src="images/logo-with-support.svg" class="img-fluid" alt="Responsive image">
-                    </div>
-                <div class="col-lg-2">
-                    <h5 class="font-weight-bold">SOLUTIONS</h5>
-                    <ul class="list-unstyled links">
-                        <li><a href="#">aiExam</a></li>
-                        <li><a href="#">aiClass</a></li>
-                        <li><a href="#">aiEvent</a></li>
-                    </ul>
+          <div class="footer d-flex py-5 flex-sm-row flex-column">
+            <div class=" col-xl-8 col-lg-7 order-3 order-sm-1">
+                    <img src="images/logo-with-support.svg" class="img-fluid d-none d-sm-block" alt="Responsive image">
+                    <img src="images/logo-with-support-mobile.svg" class="img-fluid  d-block d-sm-none mt-4" alt="Responsive image">
                 </div>
-                <div class="col-lg-2">
-                        <h5 class="font-weight-bold">CONTACT US</h5>
-                        <ul class="list-unstyled links">
-                            <li><a href="#">hi@jadwal.ai</a></li>
-                            <li><a href="#">(+971) 56 896 7479</a></li>
-                            <li><a href="#"> <a href="#"><img src="images/facebook-square.svg"></a> <a href="#"><img src="images/linkedin.svg"></a></li>
-                        </ul>
-                </div>
+            <div class="col-xl-2 col-lg-3 order-1 order-sm-2">
+                <h5 class="font-weight-bold">SOLUTIONS</h5>
+                <ul class="list-unstyled links">
+                    <li><a href="#">aiExam</a></li>
+                    <li><a href="#">aiClass</a></li>
+                    <li><a href="#">aiEvent</a></li>
+                </ul>
             </div>
+            <div class="col-xl-2 col-lg-3 order-2 order-sm-3">
+                    <h5 class="font-weight-bold">CONTACT US</h5>
+                    <ul class="list-unstyled links">
+                        <li><a href="#">hi@jadwal.ai</a></li>
+                        <li><a href="#">(+971) 56 896 7479</a></li>
+                        <li><a href="#"> <a href="#"><img src="images/facebook-square.svg"></a> <a href="#"><img src="images/linkedin.svg"></a></li>
+                    </ul>
+            </div>
+        </div>
         </div>
     </div>
 
