--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <nav class="navbar navbar-expand-md navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img height="26" class="d-inline-block align-top" src="images/jadwal-logo.svg"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -220,7 +220,9 @@
                 <div class="row green-bg p-5">
                     <div class="container p-0">
                         <h5 class="text-white text-center mb-3 font-weight-bold">IN THE NEWS</h5>
-                        <img src="images/press-logos.png" class="img-fluid" alt="Responsive image">
+                        <img src="images/press-logos-mobile.png" class="img-fluid d-block d-sm-none" alt="Responsive image ">
+                        <img src="images/press-logos.png" class="img-fluid d-none d-sm-block" alt="Responsive image ">
+
                     </div>
                 </div>
             </div>
@@ -243,11 +245,12 @@
             <div class="container-fluid border-top position-relative overflow-hidden">
                 <div class="footer-bottom-image"></div>
                 <div class="container">
-            <div class="footer d-flex py-5 flex-md-row flex-sm-column flex-sm-column-reverse">
-                <div class="col-lg-8">
-                        <img src="images/logo-with-support.svg" class="img-fluid" alt="Responsive image">
+            <div class="footer d-flex py-5 flex-sm-row flex-column">
+                <div class=" col-xl-8 col-lg-7 order-3 order-sm-1">
+                        <img src="images/logo-with-support.svg" class="img-fluid d-none d-sm-block" alt="Responsive image">
+                        <img src="images/logo-with-support-mobile.svg" class="img-fluid  d-block d-sm-none mt-4" alt="Responsive image">
                     </div>
-                <div class="col-lg-2">
+                <div class="col-xl-2 col-lg-3 order-1 order-sm-2">
                     <h5 class="font-weight-bold">SOLUTIONS</h5>
                     <ul class="list-unstyled links">
                         <li><a href="#">aiExam</a></li>
@@ -255,7 +258,7 @@
                         <li><a href="#">aiEvent</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-xl-2 col-lg-3 order-2 order-sm-3">
                         <h5 class="font-weight-bold">CONTACT US</h5>
                         <ul class="list-unstyled links">
                             <li><a href="#">hi@jadwal.ai</a></li>
