social media links updated

--- a/aiexam.html
+++ b/aiexam.html
@@ -166,7 +166,7 @@
                         <ul class="list-unstyled links">
                             <li><a href="#">hi@jadwal.ai</a></li>
                             <li><a href="#">(+971) 56 896 7479</a></li>
-                            <li><a href="#"> <a href="#"><img src="images/facebook-square.svg"></a> <a href="#"><img src="images/linkedin.svg"></a></li>
+                            <li><a href="https://www.facebook.com/dimension14ai/"><img src="images/facebook-square.svg"></a> <a href="https://www.linkedin.com/company/dimension14/"><img src="images/linkedin.svg"></a></li>
                         </ul>
                 </div>
             </div>
