footer link update

--- a/scheduledemo.html
+++ b/scheduledemo.html
@@ -116,16 +116,16 @@
             <div class="col-xl-2 col-lg-3 order-1 order-sm-2">
                 <h5 class="font-weight-bold">SOLUTIONS</h5>
                 <ul class="list-unstyled links">
-                    <li><a href="#">aiExam</a></li>
-                    <li><a href="#">aiClass</a></li>
-                    <li><a href="#">aiEvent</a></li>
+                    <li><a href="aiexam.html">aiExam</a></li>
+                    <li><a href="aiclass.html">aiClass</a></li>
+                    <li><a href="aievent.html">aiEvent</a></li>
                 </ul>
             </div>
             <div class="col-xl-2 col-lg-3 order-2 order-sm-3">
                     <h5 class="font-weight-bold">CONTACT US</h5>
                     <ul class="list-unstyled links">
-                        <li><a href="#">hi@jadwal.ai</a></li>
-                        <li><a href="#">(+971) 56 896 7479</a></li>
+                        <li><a href="mailto:hi@jadwal.ai"  >hi@jadwal.ai</a></li>
+                        <li><a href="tel:+971568967479">(+971) 56 896 7479</a></li>
                         <li><a href="https://www.facebook.com/dimension14ai/"><img src="images/facebook-square.svg"></a> <a href="https://www.linkedin.com/company/dimension14/"><img src="images/linkedin.svg"></a></li>
                     </ul>
             </div>
