whole project of jadwal

--- a/aievent.html
+++ b/aievent.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Jadwal.ai-Stress Free Scheduling</title>
+    <title>Jadwal.ai - Stress Free Scheduling</title>
+    <link rel="icon" type="image/png" sizes="92x92" href="images/fav-icon.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,800,900&display=swap&subset=latin-ext" rel="stylesheet">  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" >
@@ -112,7 +113,7 @@
                
                 <h3 class="my-3 font-weight-bold">Curious how much your institution can save? </h3>
                 <h4>Take a quick two-minute quiz to find out</h4>
-                <a href="#" class="my-3 btn btn-lg btn-primary">Get Started</a>
+                <a href="quiz.html" target="_blank" class="my-3 btn btn-lg btn-primary">Get Started</a>
             </div> 
             </div>
         </div>
